--- a/WebAPI/EmailTemplates/send2.html
+++ b/WebAPI/EmailTemplates/send2.html
@@ -89,26 +89,35 @@
 																<tr>
 																	<th scope="row" colspan="4"
 																		style="color:#636363;border:1px solid #e5e5e5;vertical-align:middle;padding:12px;text-align:left;border-top-width:4px">
-																		Nguyên giá:</th>
-																	<td
-																		style="color:#636363;border:1px solid #e5e5e5;vertical-align:middle;padding:12px;text-align:left;border-top-width:4px">
+																		Nguyên giá:
+																	</th>
+																	<td style="color:#636363;border:1px solid #e5e5e5;vertical-align:middle;padding:12px;text-align:left;border-top-width:4px">
 																		<span>{{ThanhTien}}&nbsp;<span>₫</span></span>
 																	</td>
-																</tr>	
+																</tr>
+																<tr>
+																	<th scope="row" colspan="4"
+																		style="color:#636363;border:1px solid #e5e5e5;vertical-align:middle;padding:12px;text-align:left;border-top-width:4px">
+																		Giảm giá:
+																	</th>
+																	<td style="color:#636363;border:1px solid #e5e5e5;vertical-align:middle;padding:12px;text-align:left;border-top-width:4px">
+																		<span>{{GiamGia}}&nbsp;<span>₫</span></span>
+																	</td>
+																</tr>
 																<!--<tr>
-																	<th scope="row" colspan="2"
-																		style="color:#636363;border:1px solid #e5e5e5;vertical-align:middle;padding:12px;text-align:left">
-																		Phương thức thanh toán:</th>
-																	<td
-																		style="color:#636363;border:1px solid #e5e5e5;vertical-align:middle;padding:12px;text-align:left">
-																		Chuyển khoản ngân hàng</td>
-																</tr>-->
+		<th scope="row" colspan="2"
+			style="color:#636363;border:1px solid #e5e5e5;vertical-align:middle;padding:12px;text-align:left">
+			Phương thức thanh toán:</th>
+		<td
+			style="color:#636363;border:1px solid #e5e5e5;vertical-align:middle;padding:12px;text-align:left">
+			Chuyển khoản ngân hàng</td>
+	</tr>-->
 																<tr>
 																	<th scope="row" colspan="4"
 																		style="color:#636363;border:1px solid #e5e5e5;vertical-align:middle;padding:12px;text-align:left">
-																		Tổng cộng:</th>
-																	<td
-																		style="color:#636363;border:1px solid #e5e5e5;vertical-align:middle;padding:12px;text-align:left">
+																		Tổng cộng:
+																	</th>
+																	<td style="color:#636363;border:1px solid #e5e5e5;vertical-align:middle;padding:12px;text-align:left">
 																		<span>{{TongTien}}&nbsp;<span>₫</span></span>
 																	</td>
 																</tr>
